@@ -1,3 +1,7 @@
+2014-10-10  Tobias Burnus  <burnus@net-b.de>
+
+	* gfortran.dg/implicit_16.f90: New.
+
 2014-10-09  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	* g++.dg/cpp0x/constexpr-using3.C: New.
